src/test/scala/wacc/ext_pair/invalid/badPairType2.wacc
# Assignment is not legal when both sides types do not match

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int, int) p = newpair(4, 5);
  pair(char, int) q = newpair('p', 6);
  pair(pair, pair) a = newpair(p, q);
  a = p
end